# skylake-core

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  DEV_PRIMER.md  FEATURES.md  LICENSE  README.md  SKL_TUNING.md
.github/workflows/: main.yaml
cmake/modules/: SkylakeCoreLogging.cmake  SkylakeCoreOptionValues.cmake  SkylakeCoreOptions.cmake  SkylakeCoreTest.cmake  SkylakeCoreUtils.cmake  SkylakeCoreWarnings.cmake  SkylakeLib_CompilerFlags.cmake  SkylakeLib_CreateTargets.cmake  SkylakeLib_Options.cmake  SkylakeLib_OptionsValues.cmake  SkylakeLib_Platform.cmake  SkylakeLib_Tuning.cmake  SkylakeLib_Utils.cmake  SkylakeLib_Warnings.cmake  SkylakeValidatePlatform.cmake
cmake/presets/: default_presets.json  dev_presets.json  qa_presets.json
cmake/py/: generate_tuning.py
cmake/tuning/: SkylakeTuning.cmake  generate_tuning.py
skl-core/: CMakeLists.txt
skl-core/include/: skl_assert  skl_atomic  skl_buffer_view  skl_circular_queue  skl_circular_queue_if  skl_core  skl_core_tuning  skl_debug_trap  skl_def  skl_entityid  skl_epoch  skl_fixed_vector  skl_fixed_vector_if  skl_fsm  skl_fsm_example  skl_guid  skl_hash  skl_int  skl_log  skl_rand  skl_sguid  skl_socket  skl_spin_lock  skl_status  skl_stream  skl_string_literal  skl_string_utils  skl_string_view  skl_thread  skl_thread_id  skl_tls  skl_utility  skl_vector_if
skl-core/include/skl_logger/: skl_slogger_bend.hpp  skl_slogger_fend.hpp  skl_slogger_sink.hpp
skl-core/include/skl_traits/: ctor  forward  is_array  is_cstring  placement_new  rm_all_cv  rm_array_extent  rm_cv  t_in_pack
skl-core/source/: skl_assert.cpp  skl_core.cpp  skl_epoch.cpp  skl_guid.cpp  skl_memory.cpp  skl_rand.cpp  skl_signal.cpp  skl_siphash_16.cpp  skl_siphash_4.cpp  skl_siphash_8.cpp  skl_slogger_bend.cpp  skl_slogger_fend.cpp  skl_slogger_sink.cpp  skl_socket.cpp  skl_string_utils.cpp  skl_thread.cpp  skl_thread_id.cpp  skl_validate.cpp  skl_vector.cpp
src/include/: skl_assert  skl_atomic  skl_base64  skl_buffer_view  skl_circular_queue  skl_circular_queue_if  skl_core  skl_core_info  skl_core_tuning  skl_debug_trap  skl_deck  skl_def  skl_dod_fsm  skl_dynamic_bitset  skl_epoch  skl_fixed_vector  skl_fixed_vector_if  skl_flags  skl_fsm  skl_fsm_example  skl_guid  skl_hash  skl_huge_pages  skl_int  skl_ip  skl_log  skl_magic_enum  skl_memory  skl_pair  skl_prefetch  skl_rand  skl_report  skl_report_read  skl_resources_dir  skl_result  skl_sguid  skl_sguid64  skl_signal  skl_sleep  skl_socket  (+21 more)
src/include/skl_logger/: skl_slogger_bend.hpp  skl_slogger_fend.hpp  skl_slogger_shared.hpp  skl_slogger_sink.hpp
src/include/skl_pool/: buffer_pool  hugepage_buffer_pool  hugepage_stl  stable_object_pool  stable_object_pool.hpp
src/include/skl_timing/: htimer_wheel_design.md  timer_wheel  timer_wheel_handle
src/include/skl_traits/: conditional_t  ctor  forward  integral_constant  is_array  is_cstring  is_lock_free  placement_new  rm_all_cv  rm_array_extent  rm_cv  same_as  size  t_in_pack  type_categories
src/source/: buffer_pool.cpp  hugepage_buffer_pool.cpp  skl_assert.cpp  skl_base64.cpp  skl_core.cpp  skl_epoch.cpp  skl_guid.cpp  skl_huge_pages.cpp  skl_memory.cpp  skl_rand.cpp  skl_report.cpp  skl_resources_dir.cpp  skl_signal.cpp  skl_siphash_4.cpp  skl_siphash_8.cpp  skl_sleep.cpp  skl_slogger_bend.cpp  skl_slogger_fend.cpp  skl_slogger_sink.cpp  skl_slogger_sink_handle.cpp  skl_socket.cpp  skl_status.cpp  skl_stream.cpp  skl_string_utils.cpp  skl_string_view.cpp  skl_thread.cpp  skl_thread_id.cpp  skl_timer.cpp  skl_validate.cpp  skl_vector.cpp
test/: CMakeLists.txt
test/base64-ut/: test.cpp
test/buffer-pool/: test.cpp
test/core-info/: test.cpp
test/deck/: test.cpp
test/dod-fsm/: test.cpp
test/dynamic-bit-set/: test.cpp
test/flags-ut/: test.cpp
test/guid-ut/: test.cpp
test/hugepage-buffer-pool/: test.cpp
test/hugepage-ptr/: test.cpp
test/logging-ut/: test.cpp
test/resources-dir/: test.cpp
test/signal-epilog/: test.cpp
test/skl-fixed-vector/: test.cpp
test/skl-status/: test.cpp
test/skl-vector/: test.cpp
test/spsc-bidirectional-ring/: test.cpp  test_hugepage_sanity.cpp  test_sanity.cpp
test/spsc-ring/: test.cpp
test/stable-object-pool/: test.cpp
test/static-bit-set/: test.cpp
test/timer-wheel/: test.cpp
tests/: CMakeLists.txt
tests/private/: SkylakeLibTest.h
tests/skl-core/: ut_circular_queue.cpp  ut_fixed.cpp  ut_guid.cpp  ut_hash.cpp  ut_log.cpp  ut_stream.cpp  ut_thread.cpp
